--- a/front-end/static/style.css
+++ b/front-end/static/style.css
@@ -5,9 +5,9 @@ body, html {
   }
 
 body {
-  background-color: black;
+  background-color: whitesmoke;
 }
 
 p {
-  color: white;
+  color: black;
 }
