--- a/static/style.css
+++ b/static/style.css
@@ -5,9 +5,15 @@ body, html {
   }
 
 body {
-  background-color: whitesmoke;
-}
-
-p {
+  background: #457fca;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #5691c8, #457fca);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #5691c8, #457fca); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
   color: black;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 0;
 }
