--- a/static/style.css
+++ b/static/style.css
@@ -15,8 +15,28 @@ h1 {
 
 h2 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-weight: 100;
-  color: pink;
+  text-align: center;
+  font-weight: 600;
+  letter-spacing: 10px;
+  padding: 1rem;
+  -webkit-text-stroke: 2px red;
+  animation-name: showcase;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes showcase {
+  from {
+          color: #0D131A;
+      }
+  50% {
+          color: #0D131A;
+          -webkit-text-stroke: 2px blue;
+      }
+  to {
+          color: #0D131A;
+      }
 }
 
 h4 {
@@ -36,17 +56,15 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: #FAFAFA;
   font-weight: 300;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 2;
-  letter-spacing: 0.1em;
 }
 
 a {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: 300;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 2;
-  letter-spacing: 0.1em;
   color: lightblue;
   transition: 0.25s;
 }
@@ -58,4 +76,12 @@ a:hover {
 
 hr {
   border-color: white;
+}
+
+pre code {
+  display: block;
+  padding: 16px;
+  overflow: auto;
+  border-radius: 10px;
+  color: white;
 }
