--- a/static/style.css
+++ b/static/style.css
@@ -15,10 +15,9 @@ h1 {
 
 h2 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  text-align: center;
   font-weight: 600;
+  padding: 0.5rem;
   letter-spacing: 10px;
-  padding: 1rem;
   -webkit-text-stroke: 2px red;
   animation-name: showcase;
   animation-duration: 5000ms;
@@ -84,4 +83,12 @@ pre code {
   overflow: auto;
   border-radius: 10px;
   color: white;
+}
+
+.particles-background {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: -1000;
 }
