--- a/static/style.css
+++ b/static/style.css
@@ -86,9 +86,10 @@ pre code {
 }
 
 .particles-background {
-  position: absolute;
+  position: fixed;
   display: block;
   top: 0;
   left: 0;
   z-index: -1000;
+  opacity: 0.5;
 }
